# cpputils

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
examples/: s3_credentials_config_example.py
src/cpputils/: CMakeLists.txt  __init__.py  _default_ca_path.py  _types.py  bindings.cpp  bindings.h  datetime_utils.h  digest.cpp  digest.h  ini.cpp  ini.h  string_operations.cpp  string_operations.h  system_operations.cpp  system_operations.h
tests/: test_eval_datetime.py  test_eval_type.py  test_ini_load.py
tests/configs/: .s3cfg  nest  some_config
